tests/duarouter/trips/errors/vehicle_empty_arrivalpos/errors.duarouter
Error: Attribute 'arrivalPos' in definition of trip '0' is empty.
Error: Invalid arrivalPos definition for trip '0';
 must be one of ("random", "max", or a float)
Quitting (on error).
